chore(882): decision-review lane 0 hygiene sweep (#592)
Lane 0 of the 2026-09-01 architectural decision review: the mechanical,
safe-to-do-now fixes that every later lane (A config + context budget, B
governance loop, C runtime lifecycle, D index identity + migration, E
search-quality re-derivation, F engine merge) branches from. Contract
and verified evidence:
`docs/tempdocs/882-decision-review-lane0-hygiene.md`.

## What changes

- **Native access (item 4).** `--enable-native-access=ALL-UNNAMED` at
both production JVM spawn sites (`WorkerSpawner`, Tauri `lib.rs`) and
the chaos harness. Both processes make FFM downcalls (NVML, Windows job
object, GPU driver probe); a later JDK turns today's warning into a
refusal, and only production lacked the flag. The pre-Lucene-10
`--add-opens java.nio` line and the unused `jdk.incubator.vector` jlink
module are removed. `WorkerSpawnerJvmFlagsTest` pins the argv.
- **gRPC limits and deadline (item 5).** One
`GrpcMessageLimits.MAX_INBOUND_MESSAGE_BYTES` (32 MiB) read by the
Worker server and the Head client, which had been on grpc-java's 4 MiB
default since the first commit. Worker RPC deadline default 5000 ->
15000 ms, the number tempdoc 251 asked for in March.
`GrpcMessageLimitsParityTest` pins both ends.
- **Config residue (item 22).** Dead yaml groups removed from both
`application.yaml` copies (`app.timezone`, `app.package_base`,
`workers.ai.*`, `search.rerank.*`, `telemetry.*`, `plugins.*`,
`index.language_detection`, `index.export.otlp`); the `WorkerAi` record,
its builder, its `EnvRegistry` constants and the smoke-driver stub
deleted; the `search.rerank.*` dead-config baseline pins retired; the
CLAUDE.md "Windows env vars unreliable" pitfall row removed (tempdoc 347
diagnosed Gradle configuration caching, not Windows).
- **Settings corruption (item 24).** ADR-0008 said a bad `settings.json`
is replaced with defaults; the code had drifted to throw-and-exit, and
the store-recoverability register (tempdoc 617) had recorded 